--- a/lp/scss/_hero.scss
+++ b/lp/scss/_hero.scss
@@ -87,6 +87,12 @@
 .store-badge {
   @include transition(opacity, transform);
   &:hover { opacity: 0.8; transform: translateY(-1px); }
+
+  img {
+    height: 40px;
+    width: auto;
+    max-height: none;
+  }
 }
 
 // ----- 信頼バッジ -----
